--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">MidtermAssignment01</string>
     <string name="action_settings">Settings</string>
+    <string name="select_a_country">Select a country</string>
 </resources>
