--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">MidtermAssignment01</string>
     <string name="action_settings">Settings</string>
     <string name="select_a_country">Select a country</string>
+    <string name="list_is_empty">The list is empty.</string>
 </resources>
