--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="select_a_country">Select a country</string>
     <string name="list_is_empty">The list is empty.</string>
+    <string name="cd_flag">Flag</string>
 </resources>
